--- a/index.html
+++ b/index.html
@@ -21,45 +21,43 @@
                 </div>
                 <div class="main__container--user--info-form">
                     <div class="main__container--user--info-form-input">
-                        <input placeholder="Phone number, username, or email" aria-required="true" maxlength="75" height="80px" name="username" type="text" class="" value="">
-                        <input aria-placeholder="Password" aria-required="true" type="password">
-                    </div>
-                </div>
-                <div class="">
-                    <button class="" type="submit">
-                                <div class="">Log In</div>
-                            </button>
-                </div>
-                <div class="">
-                    <div class="">
-                    </div>
-                    <div class="">or</div>
-                    <div class=""></div>
-                </div>
-                <div class="">
-                    <button class="" type="button">
-                            <span class=""></span>
-                            <span class="">Log in with Facebook</span>
+                        <input placeholder="Phone number, username, or email" aria-required="true" maxlength="75" name="username" type="text">
+                        <input placeholder="Password" aria-required="true" type="password">
+                        <button class="main__container--user--info-form-submit" type="submit">
+                            <div class="">Log In</div>
                         </button>
+                    </div>
                 </div>
-                <a class="" href="https://www.instagram.com/accounts/password/reset/" tabindex="0">Forgot password?</a>
-                <div class="">
-                    <p class="">Don't have an account?
-                        <a href="https://www.instagram.com/accounts/emailsignup/" tabindex="0">
-                            <span class="">Sign up</span>
+                <div class="main__container--user--division">
+                    <div class="main__container--user--division-line1">
+                    </div>
+                    <div class="main__container--user--division-text"> or </div>
+                    <div class="main__container--user--division-line2"></div>
+                </div>
+                <div class="main__container--user--facebook">
+                    <img class="main__container--user--facebook-logo" src="./assets/icons/facebook_icon.png">
+                    <p class="main__container--user--facebook-button">Log in with Facebook</p>
+                </div>
+                <a class="main__container--user--facebook-text" tabindex="0">Forgot password?</a>
+                <div class="main__container--user--singup">
+                    <p class="main__container--user--singup-text">Don't have an account?
+                        <a tabindex="0">
+                            <span class="main__container--user--singup-link">Sign up</span>
                         </a>
                     </p>
                 </div>
-                <div class="">
-                    <p class="">Get the App</p>
-                    <img class="" src="./assets/icons/icon Apple.png" alt="Available on the App Store">
-                    <img class="" src="assets/icons/iconPlayStore.png" alt="Available on the Apple Store">
+                <div class="main__container--user--getapp">
+                    <p class="main__container--user--getapp-text">Get the App</p>
+                    <img class="main__container--user--getapp-apple" src="./assets/icons/icon Apple.png" alt="Available on the App Store">
+                    <img class="main__container--user--getapp-playstore" src="assets/icons/iconPlayStore.png" alt="Available on the Apple Store">
                 </div>
             </div>
-
         </div>
         </div>
     </main>
 </body>
+<footer>
+
+</footer>
 
 </html>
